src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-ofT-dwF1000-dhF500-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen floating: true\ndefault column width: F1000\ndefault window height: F500\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
